@@ -1,3 +1,8 @@
+2008-06-17  Mike Kestner  <mkestner@novell.com>
+
+	* glib/GType.cs (LookupType): traversed referenced assemblies to
+	find types in currently unloaded assemblies.  Fixes #400595.
+
 2008-06-16  Andrés G. Aragoneses <aaragoneses@novell.com>
 
 	* atk/Object.custom:
